# stock_trading

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stock_trading/: charting.py  cli.py  config.py  db.py  downloader.py  fundamentals.py  screener.py  tickers.py  updater.py
tests/: conftest.py  test_charting.py  test_cli.py  test_db.py  test_downloader.py  test_fundamentals.py  test_screener.py  test_tickers.py  test_updater.py
